--- a/templates/flover/scss/modules/forms.scss
+++ b/templates/flover/scss/modules/forms.scss
@@ -97,6 +97,9 @@ input[type=checkbox], input[type=radio] {
 		      vertical-align: middle;
 		      @include single-transition(opacity);
 		    }
+		    &:after {
+		    	display: none;
+		    }
 		    &:hover {
 		      border-color: $info-color;
 		    }
@@ -150,4 +153,13 @@ input:not([type]), #{text-inputs(all, 'input')} {
 
 .ymaps-2-1-34-search__input .ymaps-2-1-34-input .ymaps-2-1-34-input__control {
 	margin-bottom: 0;
+}
+
+@media #{$small-only} {
+	label.inline {
+		margin: 0;
+	}
+	input[type=submit] {
+		margin-top: $column-gutter;
+	}
 }
