--- a/templates/flover/php/blocks/form/field.phtml
+++ b/templates/flover/php/blocks/form/field.phtml
@@ -14,10 +14,10 @@ if(!$value) {
 }
 ?>
 <div class="row">
-    <div class="small-3 columns">
+    <div class="medium-3 columns">
         <label class="inline" for="<?php echo $id;?>"><?php echo $title;?></label>
     </div>
-    <div class="small-9 columns">
+    <div class="medium-9 columns">
         <?php if($required):?>
             <label class="required" id="<?php echo $id;?>">
                 <?php if($type == 'text'):?>
