--- a/templates/flover/php/blocks/header/blocks/mini_utp.phtml
+++ b/templates/flover/php/blocks/header/blocks/mini_utp.phtml
@@ -2,7 +2,7 @@
 <?php /** @var array $variables */ ?>
 <?php $value = $this->getConfigValue('header_mini_utp');
 if($value):?>
-    <div class="info">
+    <div class="info small-only-text-center">
         <strong umi:object-id="<?php echo SITE_CONFIG_ID;?>" umi;field-name="header_mini_utp"><?php echo $value;?></strong>
     </div>
 <?php endif;?>
