--- a/templates/flover/php/blocks/modal/callback.phtml
+++ b/templates/flover/php/blocks/modal/callback.phtml
@@ -21,7 +21,7 @@ if(is_array($form)):
             }
             ?>
             <div class="row">
-                <div class="small-9 small-offset-3 columns">
+                <div class="medium-9 medium-offset-3 columns">
                     <input class="button radius" type="submit" value="Отправить">
                 </div>
             </div>
