--- a/templates/flover/php/modules/catalog/object/vk_widget.phtml
+++ b/templates/flover/php/modules/catalog/object/vk_widget.phtml
@@ -8,10 +8,10 @@ $group = trim($this->getConfigValue('catalog_object_vk_widget_group'));?>
 <?php echo $script;?>
 <section>
     <div class="row">
-        <div class="small-9 columns">
+        <div class="medium-9 columns">
             <?php echo $comments;?>
         </div>
-        <div class="small-3 columns">
+        <div class="medium-3 columns">
             <?php echo $group;?>
         </div>
     </div>
