--- a/templates/flover/php/modules/content/content/default.phtml
+++ b/templates/flover/php/modules/content/content/default.phtml
@@ -9,10 +9,10 @@
 </div>
 <section>
     <div class="row">
-        <div class="small-9 columns" umi:element-id="<?php echo $page->getId();?>" umi:field-name="content">
+        <div class="large-9 columns" umi:element-id="<?php echo $page->getId();?>" umi:field-name="content">
             <?php echo $page->getValue('content');?>
         </div>
-        <div class="small-3 columns">
+        <div class="large-3 columns">
             <?php echo $this->render(null, 'blocks/benefits');?>
         </div>
     </div>
