--- a/templates/flover/scss/foundation/_settings.scss
+++ b/templates/flover/scss/foundation/_settings.scss
@@ -362,7 +362,7 @@ $include-html-global-classes: $include-html-classes;
 // $alert-font-color-alt: scale-color($secondary-color, $lightness: -66%);
 
 // We use this for close hover effect.
-// $alert-function-factor: -14%;
+$alert-function-factor: 0;
 
 // We use these to control border styles.
 // $alert-border-style: solid;
@@ -371,13 +371,13 @@ $include-html-global-classes: $include-html-classes;
 // $alert-bottom-margin: rem-calc(20);
 
 // We use these to style the close buttons
-// $alert-close-color: $oil;
-// $alert-close-top: 50%;
-// $alert-close-position: rem-calc(4);
-// $alert-close-font-size: rem-calc(22);
-// $alert-close-opacity: .3;
-// $alert-close-opacity-hover: .5;
-// $alert-close-padding: 9px 6px 4px;
+$alert-close-color: $oil;
+$alert-close-top: 50%;
+$alert-close-position: rem-calc(4);
+$alert-close-font-size: rem-calc(12);
+$alert-close-opacity: 1;
+$alert-close-opacity-hover: 1;
+$alert-close-padding: rem-calc(14);
 // $alert-close-background: inherit;
 
 // We use this to control border radius
