--- a/templates/flover/php/blocks/header/blocks/auth.phtml
+++ b/templates/flover/php/blocks/header/blocks/auth.phtml
@@ -1,7 +1,12 @@
 <?php /** @var umiTemplaterPHP $this */ ?>
 <?php /** @var array $variables */ ?>
 <?php if(IS_AUTH):?>
-    <a href="/emarket/cart/" class="button secondary outline dropdown" data-dropdown="my">Мой кабинет</a>
+    <div class="login-open hide-for-large-up">
+        <a href="/emarket/cart/" class="modal" data-dropdown="my"><i class="material-icons md-36">person</i></a>
+    </div>
+    <div class="show-for-large-up">
+        <a href="/emarket/cart/" class="button secondary outline dropdown" data-dropdown="my">Мой кабинет</a>
+    </div>
     <ul id="my" data-dropdown-content class="f-dropdown text-left">
         <?/*<li><a href="#">Профиль</a></li>*/?>
         <?/*<li><a href="#">Заказы <span class="label secondary round">1</span></a></li>*/?>
@@ -9,17 +14,22 @@
         <li><a href="/users/logout/">Выйти</a></li>
     </ul>
 <?php else:?>
-    <a href="#registrate" class="button secondary outline modal">Зарегистрироваться</a>
-    <a href="/users/login/" class="button secondary outline dropdown" data-dropdown="login">Войти</a>
-    <div id="login" data-dropdown-content class="f-dropdown content medium">
-        <form class="login" action="/users/login_do/" method="POST">
+    <div class="login-open hide-for-large-up">
+        <a class="modal" href="#login_form"><i class="material-icons md-36">person_outline</i></a>
+    </div>
+    <div class="show-for-large-up">
+        <a href="#registrate" class="button secondary outline modal">Зарегистрироваться</a>
+        <a href="/users/login/" class="button secondary outline dropdown" data-dropdown="login_panel">Войти</a>
+    </div>
+    <div id="login_panel" data-dropdown-content class="f-dropdown content medium">
+        <form class="login" id="login_form" action="/users/login_do/" method="POST">
             <input type="text" name="login" value="" placeholder="Логин" />
             <input type="password" name="password" value="" placeholder="Пароль" />
             <div class="row collapse">
-                <div class="small-8 columns">
+                <div class="large-8 columns">
                     <input type="checkbox" id="remember" /><label for="remember">Запомнить меня</label>
                 </div>
-                <div class="small-4 columns">
+                <div class="large-4 columns">
                     <button class="button radius small expand" type="submit">Войти</button>
                 </div>
             </div>
