--- a/templates/flover/php/modules/catalog/category/default.phtml
+++ b/templates/flover/php/modules/catalog/category/default.phtml
@@ -17,28 +17,16 @@ $items = $this->macros('catalog', 'getSmartCatalogCustom', array('notemplate', P
 </div>
 <section>
     <div class="row">
-        <div class="small-9 columns">
-            <?php if(is_array($items) && isset($items['lines'])):?>
-                <ul class="small-block-grid-3 objects">
-                    <?php foreach($items['lines']['nodes:item'] as $item):?>
-                        <?php echo $this->render(array('item' => $item), 'modules/catalog/blocks/objects_list_item');?>
-                    <?php endforeach;?>
-                </ul>
-            <?php else:?>
-                <p>Товары не найдены</p>
-            <?php endif;?>
-            <?php if(is_array($items)):?>
-                <?php echo $this->render($this->macros('system', 'numpages', array(getArrayKey($items, 'total'), getArrayKey($items, 'per_page'))), 'blocks/numpages');?>
-            <?php endif;?>
-        </div>
-        <div class="small-3 columns">
+        <div class="large-3 columns right">
             <?php echo $this->render(null, 'modules/catalog/blocks/search');?>
 
             <form action="<?php echo $this->getPageLink(PAGE_ID);?>" method="GET" enctype="multipart/form-data">
                 <?php echo $this->render($sort, 'modules/catalog/blocks/sort');?>
 
                 <div class="filter">
-                    <?php echo $this->render($filter, 'modules/catalog/blocks/filter');?>
+                    <div class="row">
+                        <?php echo $this->render($filter, 'modules/catalog/blocks/filter');?>
+                    </div>
                     <hr />
                     <div class="row">
                         <div class="small-6 columns">
@@ -50,8 +38,24 @@ $items = $this->macros('catalog', 'getSmartCatalogCustom', array('notemplate', P
                     </div>
                 </div>
             </form>
-            <?php echo $this->render(null, 'blocks/benefits');?>
+            <div class="show-for-medium-up">
+                <?php echo $this->render(null, 'blocks/benefits');?>
+            </div>
         </div>
-        <!-- /Правый блок -->
+
+        <div class="large-9 columns">
+            <?php if(is_array($items) && isset($items['lines'])):?>
+                <ul class="small-block-grid-2 medium-block-grid-3 objects">
+                    <?php foreach($items['lines']['nodes:item'] as $item):?>
+                        <?php echo $this->render(array('item' => $item), 'modules/catalog/blocks/objects_list_item');?>
+                    <?php endforeach;?>
+                </ul>
+            <?php else:?>
+                <p>Товары не найдены</p>
+            <?php endif;?>
+            <?php if(is_array($items)):?>
+                <?php echo $this->render($this->macros('system', 'numpages', array(getArrayKey($items, 'total'), getArrayKey($items, 'per_page'))), 'blocks/numpages');?>
+            <?php endif;?>
+        </div>
     </div>
 </section>
