--- a/templates/flover/php/modules/catalog/object.phtml
+++ b/templates/flover/php/modules/catalog/object.phtml
@@ -16,7 +16,7 @@ $labelNew = $page->getValue('icon_new');
 ?>
 <section class="object-info" xmlns="http://www.w3.org/1999/html">
     <div class="row">
-        <div class="small-4 columns">
+        <div class="medium-4 columns">
             <?php if(is_array($images)):
                 $bigImage = $images['items']['nodes:item'][0]['value']->getFilePath(true);
                 $lastPosition = count($images['items']['nodes:item']) - 1;?>
@@ -51,7 +51,7 @@ $labelNew = $page->getValue('icon_new');
         </div>
 
         <!-- Параметры и описание -->
-        <div class="small-5 columns">
+        <div class="medium-5 columns">
             <h1 umi:element-id="<?php echo PAGE_ID?>" umi:field-name="h1"><?php echo $page->getValue('h1');?></h1>
             <?php if($anons = $page->getValue('object_anons')):?>
                 <div umi:element-id="<?php echo PAGE_ID?>" umi:field-name="object_anons">
@@ -77,7 +77,7 @@ $labelNew = $page->getValue('icon_new');
                 </ul>
             <?php endif;?>
         </div>
-        <div class="small-3 columns">
+        <div class="medium-3 columns">
             <div class="panel radius">
                 <form method="POST" action="/emarket/basket/put/element/<?php echo PAGE_ID?>/" data-cart="form" data-id="<?php echo PAGE_ID?>">
                     <?php if(is_array($price)):?>
