--- a/templates/flover/php/modules/content/content/contacts.phtml
+++ b/templates/flover/php/modules/content/content/contacts.phtml
@@ -12,7 +12,7 @@ $form = $this->macros('webforms', 'add', array(123));
 </div>
 <section>
     <div class="row">
-        <div class="small-9 columns">
+        <div class="large-9 columns">
             <?php if($map):?>
                 <?php echo $page->getValue('content_contacts_map');?><br />
             <?php endif;?>
@@ -39,14 +39,14 @@ $form = $this->macros('webforms', 'add', array(123));
                     }
                     ?>
                     <div class="row">
-                        <div class="small-9 small-offset-3 columns">
+                        <div class="medium-9 medium-offset-3 columns">
                             <input class="button radius" type="submit" value="Отправить сообщение" />
                         </div>
                     </div>
                 </form>
             <?php endif;?>
         </div>
-        <div class="small-3 columns">
+        <div class="large-3 columns">
             <?php echo $this->render(null, 'blocks/benefits');?>
         </div>
     </div>
